--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -15,8 +15,18 @@ img {
     border-radius: 40% / 50%;
     box-shadow: 0 0.2vh 0.4vh rgba(0, 0, 0, 0.4);
     border: 1px solid rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgba(0, 0, 0, 0.1)
 }
 
 .img-container {
     padding: 2%;
+}
+
+#quantity {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
